--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,15 @@
 services:
   api:
-    build: ./api
+    container_name: api
+    image: qpus/clickapi
     ports:
       - "5000:5000"
     volumes:
       - ./api:/app
 
   frontend:
-    build: ./frontend
+    container_name: frontend
+    image: qpus/click_frontend
     ports:
       - "80:80"
     depends_on:
