separeted docker installation from main.tf

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,8 @@ services:
       - "5000:5000"
     volumes:
       - ./api:/app
+    networks:
+      - click
 
   frontend:
     build: ./frontend
@@ -12,3 +14,7 @@ services:
       - "80:80"
     depends_on:
       - api
+    networks:
+      - click
+networks:
+  click:
